--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Kalkulator Konversi Suhu</h1>
         <p class="instructions">
-            Selamat datang di Kalkulator Konversi Suhu! Masukkan suhu yang ingin Anda konversi, 
+            Selamat datang di Kalkulator Konversi Suhu! Masukkan suhu yang ingin kalian konversi, 
             pilih unit suhu (Celsius atau Fahrenheit), lalu klik tombol "Konversi" untuk melihat hasilnya.
         </p>
         <form id="temperature-form">
